예림 내용 수정

--- a/집밥 백선생.html
+++ b/집밥 백선생.html
@@ -1,7 +1,13 @@
-<!DOCTYPE.html>
-<html lang"ko">
+<!DOCTYPE html> 
+<!-- 
+	(예림) lang"ko"에 "=" 랑, !DOCTYPE.html에 . 빼놓았습니다!)
+-->
+<html lang="ko">
 <head>
-	<meta charset="utf-8"
+	<meta charset="utf-8">
+<!-- 
+	<meta charset="utf-8"에 > 안붙어있어서 제가 붙여놨어요!-!
+-->
 	<title>집밥 백선생</title>
 </head>
 <body>
